<resources>
    <string name="app_name">videoAppOnAndroid</string>
    <string name="title_activity_video_player">VideoPlayerActivity</string>
    <string name="add_video_content_description">Thêm video mới hoặc quay video</string>
    <string name="ten_video_rat_dai_co_the_bi_cat_bot_o_cuoi_dong">Tên Video Rất Dài Có Thể Bị Cắt Bớt Ở Cuối Dòng</string>
    <string name="_00_00">00:00</string>
    <string name="ng_y_t_o_22_05_2025">Ngày tạo: 22/05/2025</string>
    <string name="day_l_thumnail_video">day là thumnail video</string>
    <string name="ch_n_video_t_b_nh_trong">Chọn video từ bộ nhớ trong</string>
    <string name="quay_video_m_i">Quay video mới</string>
    <string name="th_m_video_m_i">Thêm Video Mới</string>
    <string name="t_n_video">Tên video</string>
    <string name="back_button_description">Quay lại</string>
    <string name="sort_button_description">Sắp xếp video</string>
    <string name="search_button_description">Tìm kiếm video</string>
    <string name="settings_button_description">Cài đặt</string>
    <string name="tr_nh_ph_t_video">Trình phát video</string>
    <string name="menu">Menu</string> <string name="search">Tìm kiếm</string>
    <string name="settings">Cài đặt</string>
    <string name="no_videos_found">Không tìm thấy video nào.</string>
</resources>