<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:foreground="?attr/selectableItemBackground"
    android:clickable="true"
    android:focusable="true"
    app:cardBackgroundColor="@color/black">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp"
        android:gravity="center_vertical">
        <ImageView
            android:id="@+id/videoThumbnail"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:contentDescription="@string/day_l_thumnail_video"
            android:scaleType="centerCrop"
            android:src="@drawable/baseline_account_circle_24"
            />
        <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="8dp">

        <TextView
            android:id="@+id/videoTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ten_video_rat_dai_co_the_bi_cat_bot_o_cuoi_dong"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/primary_text_color"
            android:maxLines="2"
            android:ellipsize="end" />

        <TextView
            android:id="@+id/videoDuration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/_00_00"
            android:textSize="13sp"
            android:textColor="@color/secondary_text_color"
            android:layout_marginTop="4dp" />

        <TextView
            android:id="@+id/videoCreationTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ng_y_t_o_22_05_2025"
            android:textSize="13sp"
            android:textColor="@color/secondary_text_color"
            android:layout_marginTop="4dp" />
    </LinearLayout>
    </LinearLayout>

</androidx.cardview.widget.CardView>